Projects Rehaul - Add ExpandMore Button Atom - Fix BurgerMenu Z index - Add Project Card molecule - Fix mobile view projects overflow -  Remove waves component

--- a/src/components/molecules/BurgerMenu.css
+++ b/src/components/molecules/BurgerMenu.css
@@ -53,6 +53,7 @@
 }
 
 .burger-menu-overlay {
+   display: none;
    position: absolute;
    top: 0;
    left: 0;
